--- a/app/views/ingredients/index.html.erb
+++ b/app/views/ingredients/index.html.erb
@@ -1,10 +1,33 @@
-<!DOCTYPE html>
-<html lang="en">
-<head>
-    <meta charset="UTF-8">
-    <title>Title</title>
-</head>
-<body>
+<h1>Ingredients</h1>
 
-</body>
-</html>
+
+
+<table>
+  <thead>
+  <tr>
+    <th colspan="3"></th>
+  </tr>
+  </thead>
+  <tbody>
+  <tr>
+    <th>Ingredient</th>
+    <th>weight</th>
+  </tr>
+
+
+  <% @ingredients.each do |ingredient| %>
+  <tr>
+    <td><%= ingredient.name %></td>
+    <td><%= ingredient.weight %></td>
+    <td><%= link_to 'Edit', edit_ingredient_path(ingredient) %></td>
+    <td><%= link_to 'Delete', {:action => 'delete', :id => ingredient.id}  %></td>
+  </tr>
+  <% end %>
+  </tbody>
+
+</table>
+
+
+<br>
+<h4><%= link_to 'New Ingredient', new_ingredient_path %></h4>
+<h3><%= link_to 'Back to Recipes', recipes_path %></h3>
